Finally everything fully works again with java 21 virtual threads. Had to fully remove all thread pooling and instead we use semaphores to control the number of threads actually performing work otherwise they are just blocking